--- a/FLEXBOX/style.css
+++ b/FLEXBOX/style.css
@@ -5,6 +5,7 @@
 
 body {
     font-family:'Montserrat' sans-serif;
+    overflow-x:hidden;
 }
 
 /* navbar */ 
@@ -20,7 +21,7 @@ nav {
 nav .logo {
     font-family: 'Pacifico' , cursive;
     letter-spacing: 2px;
-    padding-right :360px;
+    
 }
 nav ul {
     display: flex;
@@ -39,19 +40,56 @@ nav ul li a:hover {
 }
 /* Hamburger Menu */
 
-menu-toggle {
+.menu-toggle {
+    display:flex;
+    flex-direction: column;
+    height: 20px;
+    justify-content: space-between;
+    position: relative;
+    display: none;
+}
+
+.menu-toggle input {
+    position:absolute;
+    width: 40px;
+    height: 28px;
+    left:-6px;
+    top:-5px;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 2;
+   
 }
 .menu-toggle span {
     display: block;
     width: 28px;
     height: 3px;
     background-color:pink;
+    transition: all 0.5s;
 }
 
+/* hamburger menu animation */
+.menu-toggle span:nth-child(2){
+    transform-origin: 0 0;
+}
 
+.menu-toggle span:last-child {
+    transform-origin:0 100%;
+}
 
+.menu-toggle input:checked~span:nth-child(2){
+    background-color: white;
+    transform: rotate(45deg) translate(-1px ,-1px);
+}
+.menu-toggle input:checked~span:nth-child(4){
+    transform: rotate(-45deg) translate(-1px,0);
+    background-color: white;
 
-
+}
+.menu-toggle input:checked~span:nth-child(3){
+    transform: scale(0);
+    opacity: 0;
+}
 /* Responsive BreakPoint */
 
 /* Ukuran tablet */
@@ -65,10 +103,32 @@ menu-toggle {
 
 
 @media (max-width:576px ) {
-    nav ul {
-        display: none;
+   .menu-toggle {
+        display: flex;
     }
+     nav ul {
+        position: absolute;
+        right: 0;
+        top:0;
+        height: 100vh;
+        width: 50%;
+        align-items: center;
+        flex-direction: column;
+        background-color: black;
+        justify-content: space-evenly;
+        z-index:-1px;
+        background-color: rgb(180,78,242);
+        transform: translateX(100%);
+        transition: all 1s;
+        opacity: 0;
+    }
+    nav ul.slide {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
 }
+
 
 
 
